--- a/profile.html
+++ b/profile.html
@@ -81,8 +81,8 @@
 
       <div class="user">
          <img src="images/pic-1.jpg" alt="">
-         <h3>shaikh anas</h3>
-         <p>student</p>
+         <h3>Sajawal Nawaz</h3>
+         <p>Student</p>
          <a href="update.html" class="inline-btn">update profile</a>
       </div>
    
