--- a/classwork.html
+++ b/classwork.html
@@ -20,6 +20,23 @@
                 <button class="submit">Submit Assignment</button>
             </form>
         </section>
+
+        <section id="teacher-panel">
+            <h2>Teacher Panel</h2>
+            <form id="create-assignment-form">
+                <label for="assignment-title">Assignment Title:</label>
+                <input type="text" id="assignment-title" required>
+                <label for="assignment-description">Assignment Description:</label>
+                <textarea id="assignment-description" required></textarea>
+                <button type="submit">Create Assignment</button>
+            </form>
+        </section>
+        <section id="student-panel">
+            <h2></h2>
+            <div id="assignments-list">
+                <!-- Assignments will be dynamically added here -->
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2023 Sajawal Nawaz. All rights reserved.</p>
