--- a/classwork.html
+++ b/classwork.html
@@ -27,7 +27,7 @@
                 <label for="assignment-title">Assignment Title:</label>
                 <input type="text" id="assignment-title" required>
                 <label for="assignment-description">Assignment Description:</label>
-                <textarea id="assignment-description" required></textarea>
+                <textarea id="assignment-description" required></textarea><br><br>
                 <button type="submit">Create Assignment</button>
             </form>
         </section>
