--- a/classwork.html
+++ b/classwork.html
@@ -28,7 +28,7 @@
                 <input type="text" id="assignment-title" required>
                 <label for="assignment-description">Assignment Description:</label>
                 <textarea id="assignment-description" required></textarea><br><br>
-                <button type="submit">Create Assignment</button>
+                <button class="submit">Create Assignment</button>
             </form>
         </section>
         <section id="student-panel">
